--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,6 +7,7 @@
     "express": "5.1.0",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.14.0",
+    "node-fetch": "^3.3.2",
     "socket.io": "4.8.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
